# invoice_ocr_mcp

./: .gitignore  Dockerfile  LICENSE  MCP工具测试报告.md  README.md  RapidOCR集成方案总结.md  demo_client.py  demo_rapidocr_client.py  docker-compose.yml  env.example  json_output.py  main.py  mock_response_test.py  pyproject.toml  real_invoice_test.py  requirements.txt  simple_client.py  simple_test_mcp_tools.py  start-python.js  start.py  test_client.py  test_mcp_tools.py  test_server.py  发票识别问题解决方案.md  解决方案说明.md
configs/: logging.yaml  models.yaml  server.yaml
docs/: api.md  deployment.md  examples.md
examples/: client_example.py
scripts/: download_models.py
src/invoice_ocr_mcp/: __init__.py  config.py  server.py
src/invoice_ocr_mcp/modules/: __init__.py  batch_processor.py  image_processor.py  invoice_parser.py  model_manager.py  ocr_engine.py  rapidocr_engine.py  utils.py  validators.py
tests/: __init__.py  conftest.py  test.py  test_invoice_parser.py  test_ocr_engine.py  test_server.py
tests/fixtures/expected_results/: README.md
tests/fixtures/sample_invoices/: README.md
